--- a/test.html
+++ b/test.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Git Project</title>
+
 </head>
 <body>
-    
+    <h1>Thats a test</h1>    
 </body>
 </html>
